--- a/server/proguard.cfg
+++ b/server/proguard.cfg
@@ -42,11 +42,11 @@
 #这里添加你不需要混淆的类
 -keep public class org.** {*;}
 -keep public class sun.** {*;}
--keep public class com.thinkgem.jeesite.test.** {*;}
--keep public class com.thinkgem.jeesite.**.dao.** {*;}
--keep public class com.thinkgem.jeesite.**.entity.** {*;}
--keep public class com.thinkgem.jeesite.modules.act.utils.Variable {*;}
--keep public class com.thinkgem.jeesite.common.persistence.Page {*;}
+-keep public class com.wxmetro.ic.test.** {*;}
+-keep public class com.wxmetro.ic.**.dao.** {*;}
+-keep public class com.wxmetro.ic.**.entity.** {*;}
+-keep public class com.wxmetro.ic.modules.act.utils.Variable {*;}
+-keep public class com.wxmetro.ic.common.persistence.Page {*;}
 
 -keep public class * extends javax.servlet.Servlet
 
@@ -57,7 +57,7 @@
 -keepclassmembers class * implements java.io.Serializable {
     <fields>;
 }
--keepclassmembers class * implements com.thinkgem.jeesite.common.persistence.BaseEntity {
+-keepclassmembers class * implements com.wxmetro.ic.common.persistence.BaseEntity {
     <fields>;
 }
 
