--- a/server/src/main/resources/log4j.properties
+++ b/server/src/main/resources/log4j.properties
@@ -26,8 +26,8 @@ log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 #Project defalult level
 #log4j.logger.org.activiti=DEBUG
 #log4j.logger.org.apache.shiro=DEBUG
-log4j.logger.com.thinkgem.jeesite=DEBUG
-log4j.logger.com.thinkgem.jeesite.common.security.shiro=WARN
+log4j.logger.com.wxmetro.ic=DEBUG
+log4j.logger.com.wxmetro.ic.common.security.shiro=WARN
 log4j.logger.JedisUtils=WARN
 log4j.logger.LoginController=WARN
 log4j.logger.OaNotifyDao.findCount=WARN
