--- a/server/src/main/resources/system.properties
+++ b/server/src/main/resources/system.properties
@@ -121,4 +121,4 @@ activiti.form.server.url=
 #userfiles.basedir=D:/jeesite
 
 #\u5DE5\u7A0B\u8DEF\u5F84\uFF0C\u5728\u4EE3\u7801\u751F\u6210\u65F6\u83B7\u53D6\u4E0D\u5230\u5DE5\u7A0B\u8DEF\u5F84\u65F6\uFF0C\u53EF\u518D\u6B64\u6307\u5B9A\u7EDD\u5BF9\u8DEF\u5F84\u3002
-#projectPath=D\:\\workspace\\jeesite
+projectPath=K\:\\wxmetro_2020\\codes\\IntelligentContainer\\server
